add page navigation from BeginWork

--- a/FTCollectorApp/View/EqCheckInPage.xaml
+++ b/FTCollectorApp/View/EqCheckInPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage Title="Select Crew" xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage Title ="CheckIn Equipment" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                          NavigationPage.HasNavigationBar="False"
-             x:Class="FTCollectorApp.Page.SelectCrewPage">
+             NavigationPage.HasNavigationBar="False"
+             x:Class="FTCollectorApp.View.EqCheckInPage">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
@@ -14,12 +14,11 @@
         </ResourceDictionary>
     </ContentPage.Resources>    
     <ContentPage.Content>
-
-        <StackLayout Padding="10" >
-            <Label Text="Select Crew Page"
+        <StackLayout Padding="10">
+            <Label Text="Equipment Check In Page!"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />            
-            <Button x:Name="btnFinish" Text="Save and Continue" Clicked="btnFinish_Clicked"/>
+                HorizontalOptions="CenterAndExpand" />
+            <Button x:Name="btnFinish" Text="Back" Clicked="btnFinish_Clicked"/>
             <Button x:Name="btnLogOut" Text="LogOut" Clicked="btnLogOut_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
