--- a/FTCollectorApp/View/EqCheckOutPage.xaml
+++ b/FTCollectorApp/View/EqCheckOutPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage Title="Select Crew" xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage Title ="CheckOut Equipment" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                           NavigationPage.HasNavigationBar="False"
-             x:Class="FTCollectorApp.Page.SelectCrewPage">
+             x:Class="FTCollectorApp.View.EqCheckOutPage">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
@@ -14,13 +14,12 @@
         </ResourceDictionary>
     </ContentPage.Resources>    
     <ContentPage.Content>
-
-        <StackLayout Padding="10" >
-            <Label Text="Select Crew Page"
+        <StackLayout Padding="10">
+            <Label Text="Equipment Check Out Page"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />            
-            <Button x:Name="btnFinish" Text="Save and Continue" Clicked="btnFinish_Clicked"/>
-            <Button x:Name="btnLogOut" Text="LogOut" Clicked="btnLogOut_Clicked"/>
+                HorizontalOptions="CenterAndExpand" />
+            <Button x:Name="btnFinish" Text="Finished Packing Equipment" Clicked="btnFinish_Clicked"/>
+            <Button x:Name="btnLogOut" Text="LogOut" Clicked="btnLogOut_Clicked"/>            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
