--- a/FTCollectorApp/View/VerifyJobPage.xaml
+++ b/FTCollectorApp/View/VerifyJobPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:FTCollectorApp.Page"
+             xmlns:local="clr-namespace:FTCollectorApp.View"
              xmlns:fa="clr-namespace:FontAwesome"
-             x:Class="FTCollectorApp.VerifyJobPage">
+             x:Class="FTCollectorApp.View.VerifyJobPage">
     <ContentPage.Content>
         <Grid Padding="20">
             <Grid.RowDefinitions>
