--- a/FTCollectorApp/View/BeginWorkPage.xaml
+++ b/FTCollectorApp/View/BeginWorkPage.xaml
@@ -3,19 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FTCollectorApp.View"
             xmlns:fa="clr-namespace:FontAwesome"
-             x:Class="FTCollectorApp.View.BeginWorkPage">
+             x:Class="FTCollectorApp.View.BeginWorkPage" x:Name="TabItem">
 
     <ContentPage Title="BeginWork">
         <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style TargetType="Button">
-                <Setter Property="TextColor" Value="White"/>
-                <Setter Property="BackgroundColor" Value="Gray"/>
-                <Setter Property="CornerRadius" Value="15"/>
-            </Style>
+            <ResourceDictionary>
+                <Style TargetType="Button">
+                    <Setter Property="TextColor" Value="White"/>
+                    <Setter Property="BackgroundColor" Value="Gray"/>
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
 
-        </ResourceDictionary>
-    </ContentPage.Resources>
+            </ResourceDictionary>
+        </ContentPage.Resources>
         <ContentPage.Content>
         <StackLayout Padding="20" >
             <Button x:Name="btnCrewList" Text="Crew List"/>
@@ -27,6 +27,11 @@
         </ContentPage.Content>
         
     </ContentPage>
-    <local:MapPage Title="Find Me"/>
-    <local:MainPage Title="LogOut" Chan/>
+
+    <local:MapPage Title="Find Me" x:Name="TabMap"/>
+    <ContentPage Title="LogOut">
+        <StackLayout Padding="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+            <Button x:Name="btnLogOut" Text="LOG OUT" Clicked="btnLogOut_Clicked"/>
+        </StackLayout>
+    </ContentPage>
 </TabbedPage>
