Add dictation & signature & S3 upload

--- a/FTCollectorApp/View/GpsDevicePopUpView.xaml
+++ b/FTCollectorApp/View/GpsDevicePopUpView.xaml
@@ -53,6 +53,7 @@
             </Button.Triggers>       
             
         </Button>
+        <ActivityIndicator VerticalOptions="Center" IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}"/>
 
 
     </StackLayout>
