Select crew code behind changed

--- a/FTCollectorApp/View/GpsDevicePopUpView.xaml
+++ b/FTCollectorApp/View/GpsDevicePopUpView.xaml
@@ -53,7 +53,7 @@
             </Button.Triggers>       
             
         </Button>
-        <ActivityIndicator VerticalOptions="Center" IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}"/>
+        <ActivityIndicator VerticalOptions="Center" IsVisible="{Binding isBusy}" IsRunning="{Binding isBusy}"/>
 
 
     </StackLayout>
