--- a/FTCollectorApp/View/VerifyJobPage.xaml
+++ b/FTCollectorApp/View/VerifyJobPage.xaml
@@ -5,7 +5,9 @@
              xmlns:fa="clr-namespace:FontAwesome"
              x:Class="FTCollectorApp.View.VerifyJobPage">
     <ContentPage.Content>
-        <Grid Padding="20">
+        <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <Grid Padding="20">
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="30"/>
@@ -59,8 +61,20 @@
                     </DataTrigger>
                 </Button.Triggers>
             </Button>
-            <ActivityIndicator VerticalOptions="Center" IsVisible="{Binding isBusy}" IsRunning="{Binding isBusy}"/>
+            <!--<ActivityIndicator VerticalOptions="Center" IsVisible="{Binding isBusy}" IsRunning="{Binding isBusy}"/>-->
 
         </Grid>
+
+
+        <StackLayout IsVisible="{Binding isBusy}" Padding="12"
+                 AbsoluteLayout.LayoutFlags="PositionProportional"
+                 AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+
+            <ActivityIndicator IsRunning="{Binding isBusy}" Color ="{StaticResource blueColor}"/>
+
+            <Label Text="Loading..." HorizontalOptions="Center" TextColor="White"/>
+
+        </StackLayout>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
