--- a/FTCollectorApp/View/SplashDownloadPage.xaml
+++ b/FTCollectorApp/View/SplashDownloadPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FTCollectorApp.View.SplashDownloadPage">
+             x:Class="FTCollectorApp.View.SplashDownloadPage"
+             NavigationPage.HasNavigationBar="False"
+             >
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" Margin="10">
             <Image Source="logo.png" HorizontalOptions="Center"/>
@@ -9,13 +11,14 @@
                  AbsoluteLayout.LayoutFlags="PositionProportional"
                  AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
 
-                <ActivityIndicator IsRunning="{Binding isBusy}" Color ="{StaticResource blueColor}"/>
+                <ActivityIndicator IsRunning="{Binding IsBusy}"  Color="Orange" />
 
 
                 <Label x:Name ="txtLoading" Text="Downloading..." HorizontalOptions="Center" TextColor="White"/>
 
             </StackLayout>
             <Button Text="Login" HorizontalOptions="Center" Clicked="LoginClicked" />
+            <Button Text="Exit" HorizontalOptions="Center" Clicked="ExitClicked" />            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
