--- a/FTCollectorApp/View/VerifyJobPage.xaml
+++ b/FTCollectorApp/View/VerifyJobPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:FTCollectorApp.View"
+             xmlns:local="clr-namespace:FTCollectorApp.Utils;assembly=FTCollectorApp"
              xmlns:fa="clr-namespace:FontAwesome"
              x:Class="FTCollectorApp.View.VerifyJobPage">
     <!--<NavigationPage.TitleView>
@@ -61,13 +61,13 @@
                 <Picker.SelectedIndex>0</Picker.SelectedIndex>
             </Picker>
             <Label Grid.Row="3" Grid.ColumnSpan="2" Text="Job Location *"/>
-            <Entry Text="" x:Name="jobLocation"    Grid.Row="4" Grid.ColumnSpan="3" IsEnabled="False"/>
+            <local:BorderColorEntry Text="" x:Name="jobLocation"    Grid.Row="4" Grid.ColumnSpan="3" IsEnabled="False"/>
             <Label Grid.Row="5" Grid.ColumnSpan="2" Text="Contact Name *"/>
-            <Entry x:Name="contactName" Grid.Row="6" Grid.ColumnSpan="3" IsEnabled="False"/>
+            <local:BorderColorEntry x:Name="contactName" Grid.Row="6" Grid.ColumnSpan="3" IsEnabled="False"/>
             <Label Grid.Row="7" Grid.ColumnSpan="2" Text="Customer Name *"/>
-            <Entry x:Name="custName" Grid.Row="8" Grid.ColumnSpan="3" IsEnabled="False"/>
+                <local:BorderColorEntry x:Name="custName" Grid.Row="8" Grid.ColumnSpan="3" IsEnabled="False"/>
             <Label Grid.Row="9" Grid.ColumnSpan="2" Text="Phone *"/>
-            <Entry Text=""  x:Name="custPhoneNum" Grid.Row="10" Grid.ColumnSpan="3" IsEnabled="True"/>
+                <local:BorderColorEntry Text=""  x:Name="custPhoneNum" Grid.Row="10" Grid.ColumnSpan="3" IsEnabled="True"/>
             <Button x:Name="submit"  Grid.Row="11" Grid.ColumnSpan="3"  Text="Verify and Continue" HorizontalOptions="EndAndExpand" BackgroundColor="{StaticResource blueColor}"
                 Clicked="submit_Clicked"
                 >
