--- a/FTCollectorApp/View/MainPage.xaml
+++ b/FTCollectorApp/View/MainPage.xaml
@@ -2,16 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FTCollectorApp.View.MainPage"
+             xmlns:local="clr-namespace:FTCollectorApp.Utils;assembly=FTCollectorApp"
              NavigationPage.HasNavigationBar="False" 
              >
 
     <StackLayout VerticalOptions="CenterAndExpand" Margin="10">
         <Image Source="logo.png" HorizontalOptions="Center"/>
-        <Entry x:Name="entryEmail" Placeholder="Username" 
+        <local:BorderEntry x:Name="entryEmail" Placeholder="Username" 
             Keyboard="Email" 
             HorizontalOptions="FillAndExpand" 
             TextChanged="entryEmail_TextChanged"/>
-        <Entry x:Name="entryPassword" Placeholder="Password"  
+        <local:BorderEntry x:Name="entryPassword" Placeholder="Password"  
                IsPassword="true" HorizontalOptions="FillAndExpand" 
                TextChanged="entryPassword_TextChanged"/>
 
@@ -24,8 +25,8 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Entry Margin="0,0,5,0" Grid.Column="0" Text="" x:Name="txtFirstName" IsEnabled="False"/>
-            <Entry Margin="5,0,0,0" Grid.Column="1"  x:Name="txtLastName" IsEnabled="False" />
+            <local:BorderColorEntry Margin="0,0,5,0" Grid.Column="0" Text="" x:Name="txtFirstName" IsEnabled="False"/>
+            <local:BorderColorEntry Margin="5,0,0,0" Grid.Column="1"  x:Name="txtLastName" IsEnabled="False" />
         </Grid>
         <Button x:Name="btnLogin" Text="Sign In"  HorizontalOptions="FillAndExpand" 
             BackgroundColor="{StaticResource blueColor}" TextColor="White" Clicked="btnLogin_Clicked">
